# pytest-for-software-testing

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  lint.yaml
source/: classroom.py  my_functions.py  service.py  shapes.py
tests/: conftest.py  test_circle.py  test_classroom.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
