[tool.poetry]
name = "pytest-for-software-testing"
version = "0.1.0"
description = ""
authors = ["glennlum <glennlum_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
